--- a/packages/flyer_chat_text_message/pubspec.yaml
+++ b/packages/flyer_chat_text_message/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_chat_core: ^0.0.5
+  flutter_highlighter: ^0.1.1
   flutter_markdown: ^0.7.4+3
+  flutter_math_fork: ^0.7.3
+  markdown: ^7.3.0
   provider: ^6.1.2
 
 dev_dependencies:
